--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                    
     
     
     
@@ -57,8 +57,12 @@
     
     
     
-    <wb-module deploy-name="Hello-World-25.1.0">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+    
+    
+    <wb-module deploy-name="Acme-ANS-D01-25.1.0">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -116,7 +120,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -174,7 +180,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -219,7 +227,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                                
+                                                                                                                                
+        
+        
         
         
         
@@ -233,7 +243,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
-                                                                                
+                                                                                                
+        
+        
         
         
         
@@ -243,9 +255,10 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -303,11 +316,10 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                
-        
-        
-        <property name="context-root" value="Hello-World"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+        <property name="context-root" value="Acme-ANS-D01"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+    
+    
     
     
     
@@ -366,7 +378,9 @@
     
     
     </wb-module>
-                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                
+
+
 
 
 
