--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                                                
+    
     
     
     
@@ -66,7 +67,8 @@
     
     
     <wb-module deploy-name="Acme-ANS-D04">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -132,7 +134,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -198,7 +201,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        
         
         
         
@@ -251,7 +255,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                                                                
+                                                                                                                                                        
+        
         
         
         
@@ -269,27 +274,33 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                        
+                                                                
+        
         
         
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                        
+                                                
+        
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.2.0"/>
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.3.0"/>
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.5.0"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -355,13 +366,15 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                                
+                                                        
+        
         
         
         
         
         <property name="context-root" value="Acme-ANS"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+    
     
     
     
@@ -428,7 +441,8 @@
     
     
     </wb-module>
-                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                            
+
 
 
 
