--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                        
     
     
     
@@ -66,8 +66,12 @@
     
     
     
-    <wb-module deploy-name="Acme-ANS-D04">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+    
+    
+    <wb-module deploy-name="Acme-ANS-C2">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -134,7 +138,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -201,7 +207,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -255,7 +263,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                                                                        
+                                                                                                                                                                        
+        
+        
         
         
         
@@ -274,7 +284,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                
+                                                                                
+        
+        
         
         
         
@@ -282,24 +294,37 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                                
+                                                                
+        
+        
         
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.2.0"/>
-                                        
+                                                        
+        
+        
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.3.0"/>
-                                        
+                                                        
+        
+        
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+                        
+        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.5.0"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.6.0"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -366,14 +391,18 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                                        
+                                                                        
+        
+        
         
         
         
         
         
         <property name="context-root" value="Acme-ANS"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+    
+    
     
     
     
@@ -441,7 +470,9 @@
     
     
     </wb-module>
-                                                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                                                    
+
+
 
 
 
